<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Pneck</string>
    <string name="p_neck">Pneck</string>
    <string-array name="country_names">

        <item>English(US)</item>
        <item>Hindi</item>
    </string-array>
    <string-array name="country_codes">
        <item>en</item>
        <item>hi</item>
    </string-array>
    <string name="google_maps_api_keys">AIzaSyCa6F4F-g-v5PbK1hBmXg_bZOyRKOaBvpQ</string>
    <string name="google_maps_api_key">AIzaSyByGoG67zascxLq5z-C930zZPS2ZqFivbs</string>
    <string name="facebook_app_id">2691819664391880</string>
    <string name="fb_login_protocol_scheme">fb2691819664391880</string>
    <string name="refere">Refer &amp; Earn</string>
    <string name="your_refer_code">Your Referral Code</string>
    <string name="tap_copy">Tap To Copy</string>
    <string name="refer_now">REFER NOW</string>
    <string name="msg_no_result">Sorry, no results found</string>
    <string name="msg_search_again">Please check the spelling or try a different word</string>
    <string name="up_location">Update Location</string>
    <string name="internet_connection_error">No Internet connection, Please try again later!</string>
    <string name="food_delivery">Food Delivery...</string>
    <string name="email_or_username">Email or Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="new_user">new user ?</string>
    <string name="register">Register</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone number</string>
    <string name="crash_toast_text">Something Wrong</string>
    <string name="phone_no">Enter Phone number</string>
    <string name="by_clicking">By clicking "Registration" I confirm that I have read and agreed to the <font fgcolor="#2B2B2B">Terms &amp; Conditions</font> and <font fgcolor="#33BEC0">Privacy Policy</font></string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="CAN_NOT_ABLE_TO_GET_ADDRESS">Can\'t able to get your current location</string>
    <string name="LANDMARK">Landmark</string>
    <string name="ENTER_LANDMARK">Enter landmark</string>
    <string name="ADDRESS">Location</string>
    <string name="BOOK_NOW">BOOK NOW</string>
    <string name="ENTER_VALID_ADDRESS">Enter valid address</string>
    <string name="PERMISSION_SNACK_BAR_MESSAGE">Please give permission to access location.</string>
    <string name="PLEASE_GIVE_PERMISSIONS">Please give permission to access location.</string>
    <string name="ORDER_BOOKED_SUCCESSFULLY">Your order booked successfully.</string>
    <string name="STATUS">STATUS</string>
    <string name="BOOKING_ID">BOOKING ID</string>
    <string name="BOOKING_NO">BOOKING NO.</string>
    <string name="TRACK_ORDER">TRACK ORDER</string>
    <string name="SOMETHING_WENT_WRONG">Slow network connection try again..</string>
    <string name="ENABLE">ENABLE</string>
    <string name="CHECK_YOUR_INTERNET_CONNECTION">Check your internet connection</string>
    <string name="ORDERS">Orders</string>
    <string name="SUBMIT">PAY</string>
    <string name="PAY_AMOUNT">Pay Amount</string>
    <string name="PAY_YOUR_BILLING_AMOUNT">Pay your billing amount and complete the order.</string>
    <string name="ORDER_COMPLETE">ORDER COMPLETE</string>
    <string name="ORDER_COMPLETED_SUCCESSFULLY">Order completed successuflly</string>
    <string name="PNECK_HELP">Pneck Loves you and we love to serve you again.</string>
    <string name="TRACK_RUNNING_ORDER">You have already running order, track your running order.</string>
    <string name="NO_ORDER_YET">No order yet</string>
    <string name="NOTIFICATION">Notification</string>
    <string name="founder_name">Badal Hashmi</string>
    <string name="company">Callpneck private limited</string>
    <string name="ABOUT_US">Pneck pvt ltd is established for given Manpower and Temporary Employee for one time.  who provide best Service for Consumers. Pneck motive is that provide better and best service to anyone,Anywhere and any time. it is not only a Company. it is a thought to get ride of those problems   which we face in our daily busy life .</string>
    <string name="SUPPORT_MESSAGE">Please drop your concern to support@pneck.in, we will resolve it as soon as possible because we love to help you.</string>
    <string name="ADDRESS_TEXT">ADDRESS</string>
    <string name="GENDER">GENDER</string>
    <string name="WALLET">WALLET</string>
    <string name="YOU_ARE_IN_MIDDLE_OF_PROCESS">You are in middle of the process please finish the payment.</string>
    <string name="CANCEL_ORDER">CANCEL ORDER</string>
    <string name="CURRENT_ORDER">Current Order</string>
    <string name="PNECK_PRIVACY">Pneck Privacy Policy</string>
    <string name="SHARE_AND_EARN">Share And Earn</string>
    <string name="FEEDBACK_SUBMITED_SUCCESS">Your Feedback is submitted successfully</string>
    <string name="CANCEL">CANCEL</string>
    <string name="RATE">RATE</string>
    <string name="TELL_YOUR_EXPERIENCE_WITH_PNECK">Share your experience with Pneck</string>
    <string name="DONT_CANCEL">DON\'T CANCEL</string>
    <string name="CONTINUE">CONTINUE</string>
    <string name="TELL_YOUR_REASON_TO_CANCEL_ORDER">Tell your reason to cancel this order.</string>
    <string name="PLEASE_ENTER_CANCEL_RESON">Cancel reason should be larger the 10 words</string>
    <string name="ORDER_REQUESTED_SUCCESSFULLY">Order requested successfully</string>
    <string name="NO_PNECK_BOY_AVALIABLE">No Pneck boy is avaliable near you, try again.</string>
    <string name="TRY_AGAIN">TRY AGAIN</string>
    <string name="IMAGE_UPDATED_SUCCESSFULLY">Image updated successfully</string>
    <string name="PNECK_VENDOR">PNECK VENDOR</string>
    <string name="ADJUST_USER_LOCATION">Adjust your location and try again</string>
    <string name="VENDOR_LIST">Vendor List</string>
    <string name="STATIC">STATIC</string>
    <string name="DYNAMIC">DYNAMIC</string>
    <string name="DYANAMIC">Dynamic Vendor</string>
    <string name="STATIC_VENDORS">Static Vendors</string>
    <string name="STATIC_VENDOR_TEXT">Static vendor is a type of static stall at some specified location.</string>
    <string name="DYNAMIC_VENDOR_TEXT">Dynamic vendor can be anywhere around you.</string>
    <string name="SELECT_VENDORS">Select Vendor Type</string>
    <string name="FILTERS">FILTER</string>
    <string name="SERVICE">Service</string>
    <string name="SELECT_YOUR_PROFESSION">Prime Service</string>
    <string name="SELECT_SUB_CATEGORY">Sub Category</string>
    <string name="SELECT_CATALOGUE">Cataloge</string>
    <string name="APPLY">APPLY</string>
    <string name="MONDAY">Monday</string>
    <string name="TUESDAY">Tuesday</string>
    <string name="WEDNESDAY">Wednesday</string>
    <string name="THURSDAY">Thursday</string>
    <string name="FRIDAY">Friday</string>
    <string name="SATURDAY">Saturday</string>
    <string name="SUNDAY">Sunday</string>
    <string name="DATA_NOT_FOUND">Data not found</string>
    <string name="PLEASE_SELECT_VENDOR_TYPE">Please select vendor type</string>
    <string name="RATE_ME">RATE ME</string>
    <string name="NAVIGATE_USER">NAVIGATE VENDOR</string>
    <string name="default_notification_channel_id">pneck_user_id2372087423_notf_channel</string>
    <string name="title_activity_vendor_search">VendorSearchActivity</string>
    <string name="SEARCH_IN_pneck">Search vendors</string>
    <string name="VENDORS">Vendors</string>
    <string name="PNECK_TAG_LINE">Your service is our ambition</string>
    <string name="PNECK_SUPPORT_EMAIL">Callpneck@gmail.com</string>
    <string name="PNECK_SUPPORT_NUMBER">7500066331</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hindi_font">हिंदी</string>
    <string name="walk_1">Welcome</string>
    <string name="walk_2">Schedule</string>
    <string name="walk_3">Drivers</string>
    <string name="walk_1_description">Services to transport you where you need to go. A lot can happen, on our ride.</string>
    <string name="walk_2_description">Take a ride whenever and wherever you want. Plan and Schedule for us to pick you up.</string>
    <string name="walk_3_description">We have the most friendly drivers who will go the extra mile for you.</string>
    <string name="sign_in">Login</string>
    <string name="sign_up">Register Now</string>
    <string name="or_connect_with_social">Or connect with social</string>
    <string name="enter_the_details_you_used_to_register">Enter the details you used to register</string>
    <string name="welcome_back_sign_in_to_continue">Welcome back, sign in to continue</string>
    <string name="validmobile" tools:ignore="MissingTranslation">Please enter valid mobile number</string>
    <string name="what_your_email_address">What\'s your email address?</string>
    <string name="what_your_phonenumber" tools:ignore="MissingTranslation">What\'s your Mobile Number?</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="i_forgot_my_password">I forgot my password</string>
    <string name="i_need_to_create_an_account">I need to create an account</string>
    <string name="invalid_email">Please enter email address</string>
    <string name="invalid_password">Please enter password</string>
    <string name="invoice">Invoice</string>
    <string name="pay_now">Pay now</string>
    <string name="time_taken">Time Taken</string>
    <string name="distance_travelled">Distance Travelled</string>
    <string name="base_fare">Base Fare</string>
    <string name="tax">GST Tax</string>
    <string name="total">Total</string>
    <string name="cash">Cash</string>
    <string name="payment">Payment</string>
    <string name="your_trips">My Trips</string>
    <string name="coupon">Coupon</string>
    <string name="passbook">Passbook</string>
    <string name="help">Help</string>
    <string name="share">Share</string>
    <string name="invite_referral">Invite Referral</string>
    <string name="faq_support">FAQ Support</string>
    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="save">Save</string>
    <string name="looking_to_change_password">Looking to change password</string>
    <string name="profile">Profile</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="change_password">Change Password</string>
    <string name="our_team_persons_will_contact_you_soon">Our team persons will contact you soon!</string>
    <string name="past">Past</string>
    <string name="upcoming">Upcoming</string>
    <string name="wallet_history">Wallet History</string>
    <string name="about_us">About us</string>
    <string name="contact_us">Contact Us</string>
    <string name="founder">Founder</string>
    <string name="company_">Company</string>
    <string name="contact">Contact</string>
    <string name="drop_a_mail">DROP A MAIL</string>
    <string name="edit_cart">Edit Cart</string>
    <string name="price_are_inclusive_of_vat">Price are inclusive of VAT</string>
    <string name="checkout">Checkout</string>
    <string name="shop_now">Shop Now</string>
    <string name="orderplaced">Order Placed</string>
    <string name="order_placed1">Order Placed!</string>
    <string name="success_order">Your order has been successfully placed !</string>
    <string name="continue_shopping">Continue Shopping</string>
    <string name="noitem_incart">Your cart is empty</string>
    <string name="noitem_incart_msg">You have no items in your shopping cart.\nLets\'s go buy something!</string>
</resources>