<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".activity.SideMenuScreens.AboutUsScreen">


    <!--Toolbar-->
    <RelativeLayout
        android:id="@+id/toolbarRl"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:padding="10dp"
        android:background="@drawable/rect01">

        <ImageView
            android:layout_width="42dp"
            android:layout_height="42dp"
            app:srcCompat="@drawable/ic_arrow"
            android:padding="8dp"
            android:id="@+id/go_back"
            android:tint="@color/white"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about_us"
            android:fontFamily="@font/raleway_semibold"
            android:layout_centerInParent="true"
            android:layout_centerVertical="true"
            android:textSize="16sp"
            android:textColor="@color/white"
            />

    </RelativeLayout>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="100dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="32sp"
                android:fontFamily="@font/raleway_semibold"
                android:text="P Neck Service App"
                android:textColor="@color/grey_800"/>
            <View
                android:layout_width="110dp"
                android:layout_height="3dp"
                android:background="@color/primary_600"/>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:layout_marginTop="24dp"
                android:fontFamily="@font/raleway_semibold"
                android:textColor="@color/grey_500"
                android:layout_centerVertical="true"
                android:text="@string/founder"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textColor="@color/grey_800"
                android:fontFamily="@font/raleway"
                android:layout_centerVertical="true"
                android:text="@string/founder_name"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:layout_marginTop="24dp"
                android:fontFamily="@font/raleway_semibold"
                android:textColor="@color/grey_500"
                android:layout_centerVertical="true"
                android:text="@string/company_"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textColor="@color/grey_800"
                android:fontFamily="@font/raleway"
                android:layout_centerVertical="true"
                android:text="@string/company"/>

            <TextView
                android:id="@+id/about_us"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textColor="@color/grey_800"
                android:layout_marginTop="24dp"
                android:layout_centerVertical="true"
                android:fontFamily="@font/raleway"
                android:text="@string/ABOUT_US"/>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:layout_marginTop="20dp"
                android:paddingTop="10dp"
                android:id="@+id/privacy_policy"
                android:fontFamily="@font/raleway_semibold"
                android:paddingBottom="10dp"
                android:paddingRight="@dimen/denim_20"
                android:textColor="@color/text_color"
                android:layout_centerVertical="true"
                android:text="@string/PNECK_PRIVACY"/>

        </LinearLayout>

    </ScrollView>




</RelativeLayout>