<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.registrationSecond.Activity.EditCartActivity">


    <!--Toolbar-->
    <RelativeLayout
        android:id="@+id/toolbarRl"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:padding="10dp"
        android:background="@drawable/rect01">

        <ImageButton
            android:id="@+id/Goback"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/ic_arrow_back"
            android:tint="@color/white"
            android:background="@null"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/edit_cart"
            android:fontFamily="@font/raleway_semibold"
            android:layout_centerInParent="true"
            android:textSize="16sp"
            android:textColor="@color/white"
            />

    </RelativeLayout>



    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/cartRv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbarRl"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:listitem="@layout/layout_cart_item"
        android:layout_above="@+id/totalRL"
        />


    <LinearLayout
        android:id="@+id/totalRL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentBottom="true"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/checkoutBtn"
            >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginLeft="@dimen/editpad5dp"
                android:padding="4dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/total"
                    android:fontFamily="@font/raleway_semibold"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:textColor="@color/black"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/raleway_semibold"
                    android:text="@string/price_are_inclusive_of_vat"
                    />
            </LinearLayout>

            <TextView
                android:id="@+id/txt_total_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:text="Rs.00.00"
                android:fontFamily="@font/raleway_semibold"
                android:textSize="16sp"
                android:padding="4dp"/>

        </RelativeLayout>

        <Button
            android:id="@+id/checkoutBtn"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:text="@string/checkout"

            android:fontFamily="@font/raleway_semibold"
            android:enabled="true"
            android:textSize="18sp"
            android:background="@color/colorPrimary"
            android:textColor="@color/white"
            />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/lytempty"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:layout_below="@+id/toolbarRl"
        android:orientation="vertical"
        android:visibility="visible">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/emptycart" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/noitem_incart"

            android:fontFamily="@font/raleway_semibold"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:fontFamily="@font/raleway"
            android:text="@string/noitem_incart_msg" />

        <Button
            android:id="@+id/btnShowNow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:clickable="false"
            style="@style/Widget.AppCompat.Button.Colored"
            android:paddingStart="30dp"
            android:paddingEnd="30dp"
            android:text="@string/shop_now"
            android:fontFamily="@font/raleway_semibold"
            android:textColor="@color/white" />
    </LinearLayout>

</RelativeLayout>