<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:id="@+id/contact_layout"
            android:gravity="center">

            <ImageView
                android:layout_width="240dp"
                android:layout_height="240dp"
                app:srcCompat="@drawable/ic_smile" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="22sp"
                android:layout_margin="24dp"
                android:text="@string/ORDER_COMPLETED_SUCCESSFULLY"
                android:textColor="@color/black"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:layout_margin="24dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/PNECK_HELP"
                android:textColor="@color/grey_800"/>

        </LinearLayout>



    </LinearLayout>



    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_rounded_primary"
        android:text="@string/ORDER_COMPLETE"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:paddingRight="66dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:paddingLeft="66dp"
        android:id="@+id/home_screen"
        android:textColor="@color/text_color" />

</RelativeLayout>